--- a/src/components/portfolioproject.json
+++ b/src/components/portfolioproject.json
@@ -5,7 +5,9 @@
         "image": "/images/kevin-mccutcheon-APDMfLHZiRA-unsplash.jpg", 
         "link": "https://github.com/Connor812/Cassie-s-Cookbook", 
         "description": "Find, create and share all of your favourite recipes.",
-        "used": "Node.js, Express.js to create a RESTful API. Handlebars.js as the templating engine. MySQL and Sequelize ORM for the database. GET and POST routes for retrieving and adding new data. Deployed with Heroku."
+        "used": "Node.js, Express.js to create a RESTful API. Handlebars.js as the templating engine. MySQL and Sequelize ORM for the database. GET and POST routes for retrieving and adding new data. Deployed with Heroku.",
+        "height": "200px", 
+        "width": "300px"
     },
     {
         "id": 2, 
@@ -13,7 +15,9 @@
         "image": "/images/blake-connally-B3l0g6HLxr8-unsplash.jpg", 
         "link": "https://github.com/cassiewatsonn/JavaScriptQuiz", 
         "description": "Test your Javascript skills!", 
-        "used": "HTML and CSS that are dynamically updated; powered by JavaScript"
+        "used": "HTML and CSS that are dynamically updated; powered by JavaScript", 
+        "height": "100%", 
+        "width": "100%"
     }, 
     {
         "id": 3, 
@@ -21,7 +25,9 @@
         "image": "/images/daniel-josef-AMssSjUaTY4-unsplash (1).jpg", 
         "link": "https://github.com/cassiewatsonn/NoSQL-Social", 
         "description": "This is a social network web application where users can share their thoughts, react to friends’ thoughts, and create a friend list.", 
-        "used": "Express.js for routing, a MongoDB database, and the Mongoose ODM."
+        "used": "Express.js for routing, a MongoDB database, and the Mongoose ODM.", 
+        "height": "100%", 
+        "width": "100%"
     }, 
     {
         "id": 4, 
@@ -29,7 +35,9 @@
         "image": "/images/dylan-gillis-KdeqA3aTnBY-unsplash.jpg", 
         "link": "https://github.com/cassiewatsonn/EmployeeAuditor", 
         "description": "This application allows business owners to view and manage departments, roles and employees so that they can effectively organize and plan their business.", 
-        "used": "Node.js, Inquirer, and MySQL"
+        "used": "Node.js, Inquirer, and MySQL", 
+        "height": "100%", 
+        "width": "100%"
     },
     {
         "id": 5, 
@@ -37,7 +45,9 @@
         "image": "/images/glenn-carstens-peters-RLw-UC03Gwc-unsplash.jpg", 
         "link": "https://github.com/cassiewatsonn/NoteTaker", 
         "description": "This application allows the user to create a new note, save notes, open previous notes and delete notes.", 
-        "used": "Express.js"
+        "used": "Express.js", 
+        "height": "100%", 
+        "width": "100%"
     }, 
     {
         "id": 6, 
@@ -45,6 +55,8 @@
         "image": "/images/paul-esch-laurent-oZMUrWFHOB4-unsplash.jpg", 
         "link": "https://github.com/cassiewatsonn/README.mdGenerator", 
         "description": "This is for users looking to quickly and easily create a quality README.md file by using a command-line application!", 
-        "used": "Node.js"
+        "used": "Node.js", 
+        "height": "100%", 
+        "width": "100%"
     }
 ]
