--- a/src/components/portfolioproject.json
+++ b/src/components/portfolioproject.json
@@ -2,18 +2,20 @@
     {
         "id": 1, 
         "name": "Cassie's Cookbook!",
-        "image": "/images/kevin-mccutcheon-APDMfLHZiRA-unsplash.jpg", 
-        "link": "https://github.com/Connor812/Cassie-s-Cookbook", 
+        "image": "/images/cassies-cook.png", 
+        "link1": "https://project2-the-recipe-website.herokuapp.com/",
+        "link2": "https://github.com/Connor812/Cassie-s-Cookbook", 
         "description": "Find, create and share all of your favourite recipes.",
         "used": "Node.js, Express.js to create a RESTful API. Handlebars.js as the templating engine. MySQL and Sequelize ORM for the database. GET and POST routes for retrieving and adding new data. Deployed with Heroku.",
-        "height": "200px", 
-        "width": "300px"
+        "height": "100%", 
+        "width": "100%"
     },
     {
         "id": 2, 
         "name": "JavaScript Quiz!",
-        "image": "/images/blake-connally-B3l0g6HLxr8-unsplash.jpg", 
-        "link": "https://github.com/cassiewatsonn/JavaScriptQuiz", 
+        "image": "/images/javascript-quiz.png", 
+        "link1": "https://cassiewatsonn.github.io/JavaScriptQuiz/",
+        "link2": "https://github.com/cassiewatsonn/JavaScriptQuiz", 
         "description": "Test your Javascript skills!", 
         "used": "HTML and CSS that are dynamically updated; powered by JavaScript", 
         "height": "100%", 
@@ -22,8 +24,9 @@
     {
         "id": 3, 
         "name": "NoSQL-Social (Backend)",
-        "image": "/images/daniel-josef-AMssSjUaTY4-unsplash (1).jpg", 
-        "link": "https://github.com/cassiewatsonn/NoSQL-Social", 
+        "image": "/images/noSQLsocial.png", 
+        "link1": "https://drive.google.com/file/d/1G_LUFaymvAIrMsf0j5eyzPwAQQEwlqy0/view", 
+        "link2": "https://github.com/cassiewatsonn/NoSQL-Social", 
         "description": "This is a social network web application where users can share their thoughts, react to friends’ thoughts, and create a friend list.", 
         "used": "Express.js for routing, a MongoDB database, and the Mongoose ODM.", 
         "height": "100%", 
@@ -32,8 +35,9 @@
     {
         "id": 4, 
         "name": "Employee Auditor",
-        "image": "/images/dylan-gillis-KdeqA3aTnBY-unsplash.jpg", 
-        "link": "https://github.com/cassiewatsonn/EmployeeAuditor", 
+        "image": "/images/employeeA.png", 
+        "link1": "https://drive.google.com/file/d/1yweBJgak4xp4lcZrI6IC6zw0h0Z9oPjN/view", 
+        "link2": "https://github.com/cassiewatsonn/EmployeeAuditor", 
         "description": "This application allows business owners to view and manage departments, roles and employees so that they can effectively organize and plan their business.", 
         "used": "Node.js, Inquirer, and MySQL", 
         "height": "100%", 
@@ -42,8 +46,9 @@
     {
         "id": 5, 
         "name": "NoteTaker",
-        "image": "/images/glenn-carstens-peters-RLw-UC03Gwc-unsplash.jpg", 
-        "link": "https://github.com/cassiewatsonn/NoteTaker", 
+        "image": "/images/notetaker.png", 
+        "link1": "https://c-watson-notetaker.herokuapp.com/", 
+        "link2": "https://github.com/cassiewatsonn/NoteTaker", 
         "description": "This application allows the user to create a new note, save notes, open previous notes and delete notes.", 
         "used": "Express.js", 
         "height": "100%", 
@@ -52,8 +57,9 @@
     {
         "id": 6, 
         "name": "README.md Generator",
-        "image": "/images/paul-esch-laurent-oZMUrWFHOB4-unsplash.jpg", 
-        "link": "https://github.com/cassiewatsonn/README.mdGenerator", 
+        "image": "/images/readme.png", 
+        "link1": "https://drive.google.com/file/d/1Ga10zyoWDSp54f_XdS19OsVCnPYGDY0v/view", 
+        "link2": "https://github.com/cassiewatsonn/README.mdGenerator", 
         "description": "This is for users looking to quickly and easily create a quality README.md file by using a command-line application!", 
         "used": "Node.js", 
         "height": "100%", 
